--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -143,7 +143,7 @@
   <color name="notification_center.body">#545454</color>
   <color name="notification_center.date">#9c9dac</color>
   <color name="notification_center.read.bg">#FFFFFF</color>
-  <color name="notification_center.unread.bg">#F3F3F3</color>
+  <color name="notification_center.unread.bg">#FCF8F8</color>
 
   <color name="publish_article.tag_images.selected_bg">#80000000</color>
 
