--- a/app/src/main/res/layout/add_video_details_activity.xml
+++ b/app/src/main/res/layout/add_video_details_activity.xml
@@ -35,57 +35,117 @@
     </RelativeLayout>
   </androidx.appcompat.widget.Toolbar>
 
-  <com.mycity4kids.widget.CustomFontEditText
-    android:id="@+id/videoTitleEditText"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/toolbar"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="20dp"
-    android:backgroundTint="@color/common_underline"
-    android:hint="@string/add_video_details.title_hint"
-    android:maxLength="150"
-    android:paddingTop="20dp"
-    android:paddingBottom="20dp"
-    android:textColor="@color/add_video_details.title_text"
-    android:textColorHint="@color/add_video_details.title_hint"
-    android:textSize="16sp"
-    fab:fontName="oswald.ttf" />
-
-  <com.afollestad.easyvideoplayer.EasyVideoPlayer
-    android:id="@+id/player"
-    android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:layout_below="@+id/videoTitleEditText" />
-
-  <com.mycity4kids.widget.CustomFontTextView
-    android:id="@+id/selectTagLabel"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/player"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="10dp"
-    android:textColor="@color/app_dark_black"
-    android:text="@string/add_vlogs_detail_select_tag"
-    android:textSize="18sp" />
-
   <ScrollView
-    android:id="@+id/subcategoryScrollView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_above="@+id/saveUploadTextView"
-    android:layout_below="@+id/selectTagLabel"
-    android:layout_marginTop="10dp">
-
-    <org.apmem.tools.layouts.FlowLayout
-      android:id="@+id/subCategoriesContainer"
+    android:layout_below="@+id/toolbar">
+    <RelativeLayout
+      android:id="@+id/containerView"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="10dp" />
+      android:layout_height="match_parent">
 
+      <com.mycity4kids.widget.CustomFontEditText
+        android:id="@+id/videoTitleEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:backgroundTint="@color/common_underline"
+        android:hint="@string/add_video_details.title_hint"
+        android:maxLength="150"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:textColor="@color/add_video_details.title_text"
+        android:textColorHint="@color/add_video_details.title_hint"
+        android:textSize="16sp"
+        fab:fontName="oswald.ttf" />
+
+      <com.afollestad.easyvideoplayer.EasyVideoPlayer
+        android:id="@+id/player"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_below="@+id/videoTitleEditText" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/selectTagLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/player"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/add_vlogs_detail_select_tag"
+        android:textColor="@color/app_dark_black"
+        android:textSize="18sp" />
+
+      <!--    <ScrollView-->
+      <!--      android:id="@+id/subcategoryScrollView"-->
+      <!--      android:layout_width="match_parent"-->
+      <!--      android:layout_height="wrap_content"-->
+      <!--      android:layout_above="@+id/saveUploadTextView"-->
+      <!--      android:layout_below="@+id/selectTagLabel"-->
+      <!--      android:layout_marginTop="10dp">-->
+
+      <org.apmem.tools.layouts.FlowLayout
+        android:id="@+id/subCategoriesContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/selectTagLabel"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp" />
+
+      <!--    </ScrollView>-->
+
+      <RelativeLayout
+        android:id="@+id/popup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transparent_black_90"
+        android:elevation="21dp"
+        android:visibility="gone">
+
+        <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_centerVertical="true"
+          android:layout_marginStart="@dimen/space_20"
+          android:layout_marginEnd="@dimen/space_20"
+          android:background="@drawable/rootlayout_with_rounded_corner">
+
+          <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_10"
+            android:layout_marginBottom="@dimen/space_10"
+            android:gravity="center_horizontal"
+            android:padding="@dimen/space_10"
+            android:text="@string/video_upload_thankyou_msg"
+            android:textColor="@color/input_text_color"
+            android:textSize="18sp" />
+
+          <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/okay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/space_10"
+            android:layout_marginBottom="@dimen/space_15"
+            android:background="@drawable/update_profile_bg"
+            android:paddingStart="@dimen/space_20"
+            android:paddingTop="@dimen/space_10"
+            android:paddingEnd="@dimen/space_20"
+            android:paddingBottom="@dimen/space_10"
+            android:text="@string/blog_setup.okay"
+            android:textAllCaps="true"
+            android:textColor="@color/white" />
+        </RelativeLayout>
+
+      </RelativeLayout>
+    </RelativeLayout>
   </ScrollView>
-
   <com.mycity4kids.widget.CustomFontTextView
     android:id="@+id/saveUploadTextView"
     android:layout_width="match_parent"
@@ -100,51 +160,4 @@
     android:textColor="@color/app_red"
     android:textSize="17sp"
     fab:fontName="oswald_regular.ttf" />
-
-  <RelativeLayout
-    android:id="@+id/popup"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/transparent_black_90"
-    android:elevation="21dp"
-    android:visibility="gone">
-
-    <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_centerVertical="true"
-      android:layout_marginStart="@dimen/space_20"
-      android:layout_marginEnd="@dimen/space_20"
-      android:background="@drawable/rootlayout_with_rounded_corner">
-
-      <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_10"
-        android:layout_marginBottom="@dimen/space_10"
-        android:gravity="center_horizontal"
-        android:padding="@dimen/space_10"
-        android:text="@string/video_upload_thankyou_msg"
-        android:textColor="@color/input_text_color"
-        android:textSize="18sp" />
-
-      <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/okay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/space_10"
-        android:layout_marginBottom="@dimen/space_15"
-        android:background="@drawable/update_profile_bg"
-        android:paddingStart="@dimen/space_20"
-        android:paddingTop="@dimen/space_10"
-        android:paddingEnd="@dimen/space_20"
-        android:paddingBottom="@dimen/space_10"
-        android:text="@string/blog_setup.okay"
-        android:textAllCaps="true"
-        android:textColor="@color/white" />
-    </RelativeLayout>
-  </RelativeLayout>
 </RelativeLayout>
