--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -571,4 +571,6 @@
   <color name="editor_text_selector">#157EE6</color>
   <color name="color_D63C55">#D63C55</color>
   <color name="color_2A2A2A">#2A2A2A</color>
+  <color name="color_DB4A38">#DB4A38</color>
+  <color name="color_4FD5BE">#4FD5BE</color>
 </resources>
