--- a/app/src/main/res/layout/user_personal_info_fragment.xml
+++ b/app/src/main/res/layout/user_personal_info_fragment.xml
@@ -126,9 +126,10 @@
               android:layout_marginLeft="5dp"
               android:paddingLeft="5dp"
               android:paddingTop="10dp"
+              android:maxLength="30"
               android:paddingBottom="10dp"
               android:singleLine="true"
-              android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^/\&amp;*(){}[]_-+|,."
+              android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_-."
               android:layout_toStartOf="@+id/checkTextView"
               android:textColor="@color/campaign_4A4A4A"
               android:textSize="16sp" />
