--- a/app/src/main/res/layout/commentator_comment_container_layout.xml
+++ b/app/src/main/res/layout/commentator_comment_container_layout.xml
@@ -12,11 +12,28 @@
       android:id="@+id/commentatorImageView"
       android:layout_width="34dp"
       android:layout_height="34dp"
+      android:layout_below="@id/topCommentTextView"
       android:src="@drawable/default_commentor_img" />
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/topCommentTextView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="42dp"
+      android:drawableStart="@drawable/ic_top_comment_marked_golden"
+      android:drawablePadding="@dimen/space_10"
+      android:paddingTop="@dimen/space_10"
+      android:paddingBottom="@dimen/space_10"
+      android:text="Top comment"
+      android:textColor="#979797"
+      android:textSize="14sp"
+      android:visibility="gone"
+      app:fontName="Roboto-Medium.ttf" />
     <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_below="@id/topCommentTextView"
       android:layout_toRightOf="@id/commentatorImageView">
+
 
       <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/commentatorNameAndCommentTextView"
@@ -56,6 +73,22 @@
         android:textColor="#979797" />
 
 
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/markedTopComment1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/commentDateTextView"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="21dp"
+        android:layout_toStartOf="@id/reportCommentContent1"
+        android:layout_toEndOf="@id/replyCount"
+        android:drawableStart="@drawable/ic_top_comment_raw_color"
+        android:drawablePadding="6dp"
+        android:padding="@dimen/space_5"
+        android:text="@string/top_comment_string"
+        android:textColor="#979797"
+        app:fontName="Roboto-Regular.ttf" />
       <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/reportCommentContent1"
         android:layout_width="wrap_content"
@@ -125,6 +158,23 @@
         android:drawablePadding="@dimen/space_6"
         android:padding="5dp"
         android:textColor="#979797" />
+
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/markedTopComment2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/commentDateTextView2"
+        android:layout_marginStart="@dimen/space_20"
+        android:layout_marginEnd="@dimen/space_20"
+        android:layout_toStartOf="@id/reportCommentContent2"
+        android:layout_toEndOf="@id/replyCount2"
+        android:drawableStart="@drawable/ic_top_comment_raw_color"
+        android:drawablePadding="6dp"
+        android:padding="@dimen/space_5"
+        android:text="@string/top_comment_string"
+        android:textColor="#979797"
+        app:fontName="Roboto-Regular.ttf" />
 
       <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/reportCommentContent2"
