--- a/app/src/main/res/layout/contributor_list_item.xml
+++ b/app/src/main/res/layout/contributor_list_item.xml
@@ -1,167 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:clipToPadding="false"
+  android:paddingLeft="10dp"
+  android:paddingTop="2dp"
+  android:paddingRight="10dp"
+  android:paddingBottom="2dp">
+
+  <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingBottom="2dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="2dp">
+    android:layout_height="160dp">
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+
+      <RelativeLayout
+        android:id="@+id/topContainer"
         android:layout_width="match_parent"
-        android:layout_height="160dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp">
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <com.mikhaellopez.circularimageview.CircularImageView
+          android:id="@+id/bloggerImageView"
+          android:layout_width="63dp"
+          android:layout_height="63dp"
+          android:layout_marginLeft="10dp"
+          app:civ_border="true"
+          app:civ_border_color="@color/grey"
+          app:civ_border_width="1dp"
+          app:civ_shadow="false" />
 
-            <RelativeLayout
-                android:id="@+id/topContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
+        <TextView
+          android:id="@+id/bloggerName"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="8dp"
+          android:layout_marginTop="5dp"
+          android:layout_toEndOf="@+id/bloggerImageView"
+          android:layout_toRightOf="@+id/bloggerImageView"
+          android:fontFamily="sans-serif-light"
+          android:text="Blogger Name"
+          android:textColor="@color/black_color"
+          android:textSize="17sp" />
 
-                <com.mikhaellopez.circularimageview.CircularImageView
-                    android:id="@+id/bloggerImageView"
-                    android:layout_width="63dp"
-                    android:layout_height="63dp"
-                    android:layout_marginLeft="10dp"
-                    app:civ_border="true"
-                    app:civ_border_color="@color/grey"
-                    app:civ_border_width="1dp"
-                    app:civ_shadow="false" />
+        <TextView
+          android:id="@+id/userType"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/bloggerName"
+          android:layout_marginLeft="8dp"
+          android:layout_toRightOf="@+id/bloggerImageView"
+          android:fontFamily="sans-serif-light"
+          android:text="Blogger"
+          android:textColor="@color/blue_color"
+          android:textSize="13sp" />
 
-                <TextView
-                    android:id="@+id/bloggerName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_toEndOf="@+id/bloggerImageView"
-                    android:layout_toRightOf="@+id/bloggerImageView"
-                    android:fontFamily="sans-serif-light"
-                    android:text="Blogger Name"
-                    android:textColor="@color/black_color"
-                    android:textSize="17sp" />
+        <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentRight="true"
+          android:layout_marginRight="5dp">
 
-                <TextView
-                    android:id="@+id/userType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/bloggerName"
-                    android:layout_marginLeft="8dp"
-                    android:layout_toRightOf="@+id/bloggerImageView"
-                    android:fontFamily="sans-serif-light"
-                    android:text="Blogger"
-                    android:textColor="@color/blue_color"
-                    android:textSize="13sp" />
+          <TextView
+            android:id="@+id/rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-thin"
+            android:text="1"
+            android:textSize="22sp" />
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="5dp">
-
-                    <TextView
-                        android:id="@+id/rank"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="sans-serif-thin"
-                        android:text="1"
-                        android:textSize="22sp" />
-
-                    <TextView
-                        android:id="@+id/rankText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_below="@+id/rank"
-                        android:layout_marginRight="5dp"
-                        android:fontFamily="sans-serif-thin"
-                        android:text="rank"
-                        android:textSize="10sp" />
-                </RelativeLayout>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/bloggerBio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/topContainer"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="12dp"
-                android:fontFamily="sans-serif-light"
-                android:lines="2"
-                android:maxLines="2"
-                android:text="Blogger Bio"
-                android:textColor="@color/black_color"
-                android:textSize="14sp" />
-
-            <View
-                android:id="@+id/colorline"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/bloggerBio"
-                android:background="@color/login_grey" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/colorline"
-                android:layout_marginTop="8dp"
-                android:gravity="center_vertical">
-
-                <TextView
-                    android:id="@+id/followersCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_followers"
-                    android:drawablePadding="10dp"
-                    android:fontFamily="sans-serif-light"
-                    android:paddingLeft="10dp"
-                    android:text="0"
-                    android:textSize="13sp"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/blog_follow_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
-                    android:text="FOLLOW"
-                    android:textColor="#507cbe"
-                    android:textSize="13sp"
-                    android:visibility="visible" />
-
-                <RelativeLayout
-                    android:id="@+id/relativeLoadingView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="10dp"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:id="@+id/imgLoader"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
-                        android:src="@drawable/progress_spinner" />
-                </RelativeLayout>
-
-            </RelativeLayout>
-
+          <TextView
+            android:id="@+id/rankText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rank"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="5dp"
+            android:fontFamily="sans-serif-thin"
+            android:text="@string/myprofile.rank_label"
+            android:textSize="10sp" />
         </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+      </RelativeLayout>
+
+      <TextView
+        android:id="@+id/bloggerBio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topContainer"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="sans-serif-light"
+        android:lines="2"
+        android:maxLines="2"
+        android:text="Blogger Bio"
+        android:textColor="@color/black_color"
+        android:textSize="14sp" />
+
+      <View
+        android:id="@+id/colorline"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/bloggerBio"
+        android:background="@color/login_grey" />
+
+      <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/colorline"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical">
+
+        <TextView
+          android:id="@+id/followersCount"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:drawableLeft="@drawable/ic_followers"
+          android:drawablePadding="10dp"
+          android:fontFamily="sans-serif-light"
+          android:paddingLeft="10dp"
+          android:text="0"
+          android:textSize="13sp"
+          android:visibility="visible" />
+
+        <TextView
+          android:id="@+id/blog_follow_text"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentRight="true"
+          android:layout_marginRight="10dp"
+          android:text="FOLLOW"
+          android:textColor="#507cbe"
+          android:textSize="13sp"
+          android:visibility="visible" />
+
+        <RelativeLayout
+          android:id="@+id/relativeLoadingView"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignParentRight="true"
+          android:layout_centerVertical="true"
+          android:layout_marginRight="10dp"
+          android:visibility="gone">
+
+          <ImageView
+            android:id="@+id/imgLoader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/progress_spinner" />
+        </RelativeLayout>
+
+      </RelativeLayout>
+
+    </RelativeLayout>
+  </androidx.cardview.widget.CardView>
 </LinearLayout>
