--- a/app/src/main/res/layout/ss_comment_replies_item.xml
+++ b/app/src/main/res/layout/ss_comment_replies_item.xml
@@ -121,7 +121,7 @@
         android:padding="10dp"
         android:text="@string/reply"
         android:textColor="@color/ad.comment.date"
-        android:textSize="@dimen/ad_comments_date"
+        android:textSize="12sp"
         android:visibility="gone"
         app:fontName="Roboto-Regular.ttf" />
 
