--- a/app/src/main/res/layout/suggested_topic_item.xml
+++ b/app/src/main/res/layout/suggested_topic_item.xml
@@ -4,9 +4,11 @@
   android:id="@+id/suggestedTopicWidget"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  android:layout_marginBottom="@dimen/space_10"
   android:elevation="4dp"
   android:gravity="center"
-  android:padding="10dp"
+  android:padding="13dp"
+  android:textSize="16sp"
   app:fb_borderWidth="1dp"
   app:fb_radius="6dp"
   app:fb_textColor="@color/app_dark_black"
