--- a/app/src/main/res/layout/article_challenges_activity.xml
+++ b/app/src/main/res/layout/article_challenges_activity.xml
@@ -3,6 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@color/white"
   android:orientation="vertical">
 
   <androidx.appcompat.widget.Toolbar
@@ -10,6 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
+    android:elevation="4dp"
     android:minHeight="?attr/actionBarSize"
     app:theme="@style/ToolbarTheme"
     app:titleTextAppearance="@style/ToolbarTheme.Title">
@@ -25,7 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:text="@string/user_article.tabbar.published_label"
+        android:drawableLeft="@drawable/back_arroow"
+        android:drawablePadding="@dimen/space_10"
+        android:drawableTint="@color/user_articles.toolbar.title"
+        android:text="@string/home_screen.suggested_topic.title"
         android:textColor="@color/user_articles.toolbar.title"
         android:textSize="20sp"
         app:fontName="oswald_regular.ttf" />
@@ -43,25 +48,123 @@
         android:paddingEnd="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="5dp"
-        android:src="@drawable/ic_search" />
+        android:src="@drawable/ic_search"
+        android:visibility="gone" />
 
     </RelativeLayout>
   </androidx.appcompat.widget.Toolbar>
+  <RelativeLayout
+    android:id="@+id/challengeHeaderView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/toolbar">
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/challengesTextView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/space_10"
+      android:paddingStart="@dimen/space_15"
+      android:paddingEnd="@dimen/space_15"
+      android:text="@string/video_challenge_text"
+      android:textColor="@color/app_red"
+      android:textSize="18sp"
+      app:fontName="Roboto-Medium.ttf" />
 
-  <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/articleChallengesRecyclerView"
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/articleChallengesRecyclerView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/challengesTextView"
+      android:layout_marginTop="13dp"
+      android:background="@color/white_color"
+      android:paddingStart="@dimen/space_15"
+      android:paddingEnd="@dimen/space_15" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+      android:id="@+id/challengesShimmerLayout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/challengesTextView"
+      android:layout_marginTop="16dp"
+      android:animateLayoutChanges="true"
+      android:background="@color/white"
+      android:visibility="visible">
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <ImageView
+          android:layout_width="220dp"
+          android:layout_height="150dp"
+          android:layout_margin="16dp"
+          android:background="@color/background" />
+
+        <ImageView
+          android:layout_width="220dp"
+          android:layout_height="150dp"
+          android:layout_margin="16dp"
+          android:background="@color/background" />
+
+        <ImageView
+          android:layout_width="220dp"
+          android:layout_height="150dp"
+          android:layout_margin="16dp"
+          android:background="@color/background" />
+      </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
+  </RelativeLayout>
+  <com.mycity4kids.widget.CustomFontTextView
+    android:id="@+id/suggestedTopicsTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/toolbar"
-    android:background="@color/white_color" />
+    android:layout_below="@id/challengeHeaderView"
+    android:layout_marginTop="@dimen/space_20"
+    android:layout_marginBottom="@dimen/space_20"
+    android:paddingStart="@dimen/space_15"
+    android:paddingEnd="@dimen/space_15"
+    android:text="@string/home_screen.suggested_topic.title"
+    android:textColor="@color/app_red"
+    android:textSize="18sp"
+    app:fontName="Roboto-Medium.ttf" />
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/suggestedTopicsRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_below="@+id/articleChallengesRecyclerView"
-    android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
-    android:background="@color/white_color" />
+    android:layout_above="@+id/bottomLayout"
+    android:layout_below="@+id/suggestedTopicsTextView"
+    android:background="@color/white_color"
+    android:paddingStart="@dimen/space_15"
+    android:paddingEnd="@dimen/space_15" />
 
+  <RelativeLayout
+    android:id="@+id/bottomLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:background="#F8F2F3">
+
+
+    <com.mycity4kids.widget.MomspressoButtonWidget
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="@dimen/space_10"
+      android:layout_marginTop="@dimen/space_10"
+      android:layout_marginEnd="@dimen/space_10"
+      android:layout_marginBottom="@dimen/space_5"
+      android:background="@color/app_red"
+      android:paddingTop="@dimen/space_16"
+      android:paddingBottom="@dimen/space_16"
+      android:text="@string/start_writing"
+      android:textAllCaps="true"
+      android:textSize="18sp"
+      app:fb_defaultColor="@color/app_red"
+      app:fb_iconResource="@drawable/ic_start_writting"
+      app:fb_radius="4dp"
+      app:fb_textFont="Roboto-Medium.ttf" />
+  </RelativeLayout>
 </RelativeLayout>
