--- a/app/src/main/res/layout/add_ss_comment_reply_fragment.xml
+++ b/app/src/main/res/layout/add_ss_comment_reply_fragment.xml
@@ -1,188 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/root"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:background="@color/white_color"
+  android:clickable="true">
+
+  <androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white_color"
-    android:clickable="true">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:elevation="5dp"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ToolbarTheme"
-        app:titleTextAppearance="@style/ToolbarTheme.Title">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/closeImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="20dp"
-                android:src="@drawable/cross_icon_back" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/headingTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/postCommentReplyTextView"
-                android:layout_toRightOf="@+id/closeImageView"
-                android:gravity="center_vertical"
-                android:padding="10dp"
-                android:text="@string/short_s.add_comment"
-                android:textColor="@color/ad.comments.toolbar.title"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/postCommentReplyTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="4dp"
-                android:padding="10dp"
-                android:text="@string/editor.publish"
-                android:textColor="@color/app_red"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
-        </RelativeLayout>
-    </androidx.appcompat.widget.Toolbar>
+    android:layout_height="wrap_content"
+    android:background="?attr/colorPrimary"
+    android:elevation="5dp"
+    android:minHeight="?attr/actionBarSize"
+    app:theme="@style/ToolbarTheme"
+    app:titleTextAppearance="@style/ToolbarTheme.Title">
 
     <RelativeLayout
-        android:id="@+id/relativeMainContainer"
-        android:layout_width="match_parent"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+      <ImageView
+        android:id="@+id/closeImageView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_margin="4dp"
-        android:background="@drawable/topics_border_bg"
-        android:paddingBottom="4dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="8dp"
-        android:visibility="gone">
+        android:paddingTop="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="20dp"
+        android:src="@drawable/cross_icon_back" />
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/commentorImageView"
-            android:layout_width="@dimen/ad_comments_profile_pic_width"
-            android:layout_height="@dimen/ad_comments_profile_pic_width"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:contentDescription="@string/author_img"
-            android:src="@drawable/default_commentor_img"
-            android:visibility="visible"
-            app:civ_border="true"
-            app:civ_border_color="@color/white_color"
-            app:civ_border_width="0dp"
-            app:civ_shadow="true"
-            app:civ_shadow_color="@color/grey"
-            app:civ_shadow_radius="4" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/commentorUsernameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_toEndOf="@+id/commentorImageView"
-            android:layout_toRightOf="@+id/commentorImageView"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:singleLine="false"
-            android:text=""
-            android:textColor="@color/ad.comment.username"
-            android:textSize="@dimen/ad_comments_username"
-            app:fontName="oswald_regular.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/commentDataTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/commentorUsernameTextView"
-            android:layout_alignStart="@+id/commentorUsernameTextView"
-            android:layout_below="@id/commentorUsernameTextView"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:singleLine="false"
-            android:text=""
-            android:textColor="@color/ad.comment.body"
-            android:textSize="@dimen/ad_comments_text"
-            app:fontName="open_sans.ttf" />
-
-        <LinearLayout
-            android:id="@+id/dateContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/commentorUsernameTextView"
-            android:layout_alignStart="@+id/commentorUsernameTextView"
-            android:layout_below="@+id/commentDataTextView"
-            android:orientation="horizontal">
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/commentDateTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text=""
-                android:textColor="@color/ad.comment.date"
-                android:textSize="@dimen/ad_comments_date"
-                app:fontName="oswald.ttf" />
-        </LinearLayout>
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/replyCountTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/dateContainer"
-            android:layout_below="@id/dateContainer"
-            android:paddingBottom="10dp"
-            android:paddingLeft="5dp"
-            android:paddingTop="10dp"
-            android:text=""
-            android:visibility="gone" />
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/separator"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/relativeMainContainer"
-        android:background="@color/light_underline"
-        android:visibility="gone" />
-
-    <com.mycity4kids.widget.CustomFontEditText
-        android:id="@+id/commentReplyEditText"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/separator"
-        android:background="@null"
-        android:gravity="top|start"
-        android:hint="@string/add_reply"
-        android:inputType="textCapSentences|textMultiLine"
-        android:lines="10"
-        android:maxLines="30"
-        android:minLines="5"
-        android:padding="15dp"
-        android:textColor="@color/ad.comments.edit_text"
-        android:textSize="15sp"
-        android:visibility="visible"
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/headingTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/postCommentReplyTextView"
+        android:layout_toRightOf="@+id/closeImageView"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:text="@string/short_s.add_comment"
+        android:textColor="@color/ad.comments.toolbar.title"
+        android:textSize="20sp"
         app:fontName="oswald_regular.ttf" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/postCommentReplyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="4dp"
+        android:padding="10dp"
+        android:text="@string/editor.publish"
+        android:textColor="@color/app_red"
+        android:textSize="20sp"
+        app:fontName="oswald_regular.ttf" />
+    </RelativeLayout>
+  </androidx.appcompat.widget.Toolbar>
+
+  <RelativeLayout
+    android:id="@+id/relativeMainContainer"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/toolbar"
+    android:layout_margin="4dp"
+    android:background="@drawable/topics_border_bg"
+    android:paddingLeft="10dp"
+    android:paddingTop="8dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="4dp"
+    android:visibility="gone">
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+      android:id="@+id/commentorImageView"
+      android:layout_width="@dimen/ad_comments_profile_pic_width"
+      android:layout_height="@dimen/ad_comments_profile_pic_width"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentTop="true"
+      android:contentDescription="@string/author_img"
+      android:src="@drawable/default_commentor_img"
+      android:visibility="visible"
+      app:civ_border="true"
+      app:civ_border_color="@color/white_color"
+      app:civ_border_width="0dp"
+      app:civ_shadow="true"
+      app:civ_shadow_color="@color/grey"
+      app:civ_shadow_radius="4" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/commentorUsernameTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="3dp"
+      android:layout_marginLeft="3dp"
+      android:layout_toEndOf="@+id/commentorImageView"
+      android:layout_toRightOf="@+id/commentorImageView"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:paddingLeft="5dp"
+      android:paddingRight="5dp"
+      android:singleLine="false"
+      android:text=""
+      android:textColor="@color/ad.comment.username"
+      android:textSize="@dimen/ad_comments_username"
+      app:fontName="oswald_regular.ttf" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/commentDataTextView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/commentorUsernameTextView"
+      android:layout_alignStart="@+id/commentorUsernameTextView"
+      android:layout_alignLeft="@+id/commentorUsernameTextView"
+      android:layout_marginTop="8dp"
+      android:ellipsize="end"
+      android:paddingLeft="5dp"
+      android:paddingRight="5dp"
+      android:singleLine="false"
+      android:text=""
+      android:textColor="@color/ad.comment.body"
+      android:textSize="@dimen/ad_comments_text"
+      app:fontName="open_sans.ttf" />
+
+    <LinearLayout
+      android:id="@+id/dateContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/commentDataTextView"
+      android:layout_alignStart="@+id/commentorUsernameTextView"
+      android:layout_alignLeft="@+id/commentorUsernameTextView"
+      android:orientation="horizontal">
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/commentDateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:padding="5dp"
+        android:text=""
+        android:textColor="@color/ad.comment.date"
+        android:textSize="@dimen/ad_comments_date"
+        app:fontName="oswald.ttf" />
+    </LinearLayout>
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/replyCountTextView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/dateContainer"
+      android:layout_alignLeft="@+id/dateContainer"
+      android:paddingLeft="5dp"
+      android:paddingTop="10dp"
+      android:paddingBottom="10dp"
+      android:text=""
+      android:visibility="gone" />
+  </RelativeLayout>
+
+  <View
+    android:id="@+id/separator"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_below="@+id/relativeMainContainer"
+    android:background="@color/light_underline"
+    android:visibility="gone" />
+
+  <com.mycity4kids.tagging.ui.RichEditorView
+    android:id="@+id/commentReplyEditText"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_below="@+id/separator" />
 
 </RelativeLayout>
