--- a/app/src/main/res/layout/short_story_fragment.xml
+++ b/app/src/main/res/layout/short_story_fragment.xml
@@ -15,20 +15,6 @@
     android:clipToPadding="false"
     android:paddingBottom="80dp" />
 
-  <com.getbase.floatingactionbutton.FloatingActionButton
-    android:id="@+id/openAddCommentDialog"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentBottom="true"
-    android:layout_gravity="right|bottom"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="10dp"
-    android:visibility="gone"
-    app:fab_colorNormal="@color/app_red"
-    app:fab_colorPressed="@color/app_red"
-    app:fab_icon="@drawable/ic_add_comments" />
   <com.mycity4kids.widget.CustomFontTextView
     android:id="@+id/viewAllTextView"
     android:layout_width="match_parent"
@@ -37,9 +23,9 @@
     android:background="@color/app_red"
     android:gravity="center"
     android:padding="@dimen/space_10"
-    android:visibility="gone"
     android:text="@string/view_comments"
     android:textColor="@color/white"
-    android:textSize="@dimen/space_16" />
+    android:textSize="@dimen/space_16"
+    android:visibility="gone" />
 
 </RelativeLayout>
